--- a/android/ImgurDnloadr/app/src/main/res/layout/image_row.xml
+++ b/android/ImgurDnloadr/app/src/main/res/layout/image_row.xml
@@ -7,17 +7,23 @@
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:scaleType="centerCrop"
-            android:id="@+id/image"/>
+            android:id="@+id/image"
+            android:padding="4dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/title"
             android:textAppearance="@android:style/TextAppearance.Large"
             android:layout_margin="8dp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:padding="4dp"/>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
